--- a/source/notes/index.html
+++ b/source/notes/index.html
@@ -1,10 +1,10 @@
 ---
-layout: page_blog_and_notes
+layout: page_notes
 footer: false
 ---
 
 <div id="blog-archives" class="category">
-{% for post in site.tags[page.tag] %}
+{% for post in site.categories["notes"] %}
 {% capture this_year %}{{ post.date | date: "%Y" }}{% endcapture %}
 {% unless year == this_year %}
   {% assign year = this_year %}
